--- a/Cocoon/Views/Account/Register.cshtml
+++ b/Cocoon/Views/Account/Register.cshtml
@@ -58,7 +58,23 @@
                                             @Html.ValidationMessageFor(s => s.Image, "", new { @class = "text-danger" })
                                         </div>*@
                                     <div class="form-group">
-                                        <button class="btn text-white" style="background-color:black;" type="submit">@Website.Register</button>
+                                        <div class="form-check text-center">
+                                            <input type="checkbox" id="termsCheckbox" class="form-check-input" />
+                                            <label class="form-check-label" for="termsCheckbox">
+                                                <a class=" mr-3 ml-3" style="color: black; text-decoration: underline;"
+                                                   onmouseover="this.style.color='blue'"
+                                                   onmouseout="this.style.color='black'"
+                                                   href="@Url.Action("Terms", "Home")" target="_blank">
+                                                    @(culture == "ar" ? "الموافقة على الشروط والأحكام" : "Accept Terms and Conditions")
+                                                </a>
+                                            </label>
+                                        </div>
+                                        <span id="termsError" class="text-danger" style="display: none;">
+                                            @(culture == "ar" ? "يجب الموافقة على الشروط والأحكام" : "You must agree to the terms and conditions")
+                                        </span>
+                                    </div>
+                                    <div class="form-group">
+                                        <button id="submitButton" class="btn text-white" style="background-color:black;" type="submit">@Website.Register</button>
                                     </div>
                                 }
                             </div>
@@ -109,5 +125,18 @@
             $("#accessToken").val(response.authResponse.accessToken);
         $("#FB-Form").submit();
         }
+    </script>
+    <script>
+        document.getElementById("submitButton").addEventListener("click", function (e) {
+            const termsCheckbox = document.getElementById("termsCheckbox");
+            const termsError = document.getElementById("termsError");
+
+            if (!termsCheckbox.checked) {
+                e.preventDefault(); // منع إرسال الفورم
+                termsError.style.display = "block";
+            } else {
+                termsError.style.display = "none";
+            }
+        });
     </script>
 }
