--- a/Cocoon/Views/Shared/_Layout.cshtml
+++ b/Cocoon/Views/Shared/_Layout.cshtml
@@ -38,6 +38,7 @@
             }
     </style>
     <script src="https://cdn.tiny.cloud/1/cm697181gs2dmxoi2sgfygjiyj6fbdgtt1f95bidkuubz1ta/tinymce/6/tinymce.min.js" referrerpolicy="origin"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/keen-slider@6.8.5/keen-slider.min.css" />
 
     <!-- Place the following <script> and <textarea> tags in your HTML's <body> -->
     <script>
