sms saudi numbers

--- a/Cocoon/Views/Orders/Details.cshtml
+++ b/Cocoon/Views/Orders/Details.cshtml
@@ -88,7 +88,7 @@
                                         {
                                             <span>طالبات</span>
                                         }
-                                        else if (Model.UserType == OrderUserType.KingFahdUniversity)
+                                        else if (Model.UserType == OrderUserType.KingKhaledUniversity)
                                         {
                                             <span>جامعة الملك سلمان</span>
                                         }
